# gk-pilot

./: .gitmodules  .readthedocs.yaml  .requirements.txt  README.md  datasets.cfg  pyproject.toml
datasets/civic/: civic_gk_pilot_methods.ndjson  civic_gk_pilot_statements.ndjson  civic_gk_pilot_variation_descriptors.ndjson  requirements.txt
datasets/civic/dereferenced/: civic_statements_20230915.ndjson  civic_statements_20230916.ndjson  civic_statements_20231027.ndjson
datasets/civic/referenced/: documents.json  (+7 more)
datasets/clinvar/: seqrefs.json
datasets/moa/: moa_gk_pilot_methods.ndjson  moa_gk_pilot_statements.ndjson  moa_gk_pilot_variation_descriptors.ndjson  requirements.txt
docs/source/: analyses.rst  conf.py  downloads.rst  index.rst  requirements.txt  rst_epilog  schema.rst  tools.rst
examples/clingen/: canonicalAllele-ex1.yaml  categoricalCnv-ex1.yaml  describedVariation-ex1.yaml
examples/clinvar-gks/: varpath-scv-ex1.yaml  varpath-scv-ex2.yaml
notebooks/: ClinVar-SCV-GKS-python-demo.ipynb
schema/: Makefile  annotation-source.yaml  annotation.json  cat-vrs  catvars-source.yaml  catvars.json  catvrs  core-im  core-source.yaml  core.json  data-types  domain-entities  gks-common  gks-core-im  gks-domain-entities  gnomad-caf-source.yaml  profiles  va-core-im  va-profiles  va-spec  vod-source.yaml  vod.json  vrs  vrs-source.yaml  vrs.json
schema/clingen/: clinvar-source.yaml
schema/clinvar-gks/: clinvar-scv-stmt-source.yaml  clinvar-variant-source.yaml
schema/gnomAD/: gnomad-caf-source.yaml
tests/: config.py  test_basic.py  test_definitions.yaml
(+60 files in other folders)
