[tool.poetry]
name = "gk-pilot"
version = "0.1.0"
description = ""
authors = ["Alex Handler Wagner <Alex.Wagner@nationwidechildrens.org>"]
readme = "README.md"
packages = [{include = "gk_pilot"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
